[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "titan-memory"
version = "1.0.0"
description = "Neural-enhanced conversational memory system for AI agents — 10 micro-networks, tri-hybrid storage, bio-inspired retrieval"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Gabriel Schaider"},
]
keywords = [
    "memory", "ai", "agent", "conversational", "neural",
    "knowledge-graph", "vector-search", "retrieval",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/gschaidergabriel/titan-memory"
Repository = "https://github.com/gschaidergabriel/titan-memory"
Issues = "https://github.com/gschaidergabriel/titan-memory/issues"

[tool.setuptools.packages.find]
include = ["titan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
