[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcme"
version = "1.0.0"
description = "Neural-enhanced conversational memory system for AI agents — 10 micro-networks, tri-hybrid storage, bio-inspired retrieval"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Gabriel Schaider"},
]
keywords = [
    "memory", "ai", "agent", "conversational", "neural",
    "knowledge-graph", "vector-search", "retrieval",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
hnsw = [
    "hnswlib>=0.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/gschaidergabriel/lcme"
Repository = "https://github.com/gschaidergabriel/lcme"
Issues = "https://github.com/gschaidergabriel/lcme/issues"

[tool.setuptools.packages.find]
include = ["lcme*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
